Updated profile UI and integrated OpenStreetMap apis
